# rsomics-autocorrelation

./: Cargo.toml  README.md
benches/: autocorrelation.rs
src/: acf.rs  cli.rs  fft.rs  igam_d.rs  igamc.rs  io.rs  lib.rs  ljungbox.rs  ndtr.rs  pacf.rs  sum.rs
tests/: compat.rs
tests/golden/: expected.json
