[package]
name = "rsomics-autocorrelation"
version = "0.1.0"
description = "Autocorrelation (ACF), partial autocorrelation (PACF), and Ljung-Box / Box-Pierce Q-tests — value-exact to statsmodels.tsa.stattools / statsmodels.stats.diagnostic"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-autocorrelation"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "autocorrelation", "ljung-box", "time-series", "statsmodels"]
readme = "README.md"

[[bin]]
name = "rsomics-autocorrelation"
path = "src/main.rs"

[lib]
name = "rsomics_autocorrelation"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"

[[bench]]
name = "autocorrelation"
harness = false
